--- a/nilai.html
+++ b/nilai.html
@@ -100,10 +100,10 @@
                                 <div class="collapse show" id="collapseCardExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
-                                            <table class="table table-bordered text-black">
+                                            <table class="table text-black table-hover text-uppercase font-size-14">
                                                 <thead class="text-center">
                                                     <tr>
-                                                        <th class="text-nowrap text-danger text-left" colspan="4">
+                                                        <th class="text-nowrap text-danger text-left font-size-13" colspan="4">
                                                             *<i>Mohon konversi
                                                                 nilai rapor ke dalam bentuk angka skala 1 -
                                                                 100.</i>
@@ -220,10 +220,10 @@
                                 <div class="collapse show" id="collapseCardExample2">
                                     <div class="card-body">
                                         <div class="table-responsive">
-                                            <table class="table table-bordered">
-                                                <thead class="text-black text-center">
+                                            <table class="table table-hover text-uppercase font-size-14">
+                                                <thead class="text-black text-center ">
                                                     <tr>
-                                                        <th class="text-nowrap text-danger text-left" colspan="9">
+                                                        <th class="text-nowrap text-danger text-left font-size-13" colspan="9">
                                                             *<i>Mohon konversi nilai rapor ke dalam bentuk angka skala
                                                                 1 - 100. Jika nilai pada mata pelajaran tertentu tidak
                                                                 ada, nilai dapat diisi dengan nol.</i>
@@ -572,7 +572,7 @@
                                 <div class="collapse show" id="collapseCardExample3">
                                     <div class="card-body">
                                         <div class="col-12 m-auto text-black">
-                                            <p class="text-danger font-weight-bold colspan=" 9">
+                                            <p class="text-danger font-weight-bold text-uppercase font-size-13">
                                                 *<i>Untuk jalur prestasi non-akademik wajib mengisi prestasi olahraga
                                                     atau seni (juara 1 - 3) untuk minimal 3 event regional/provinsi atau
                                                     2 event nasional atau 1 event internasional (dalam cabang olahraga
