--- a/persyaratan.html
+++ b/persyaratan.html
@@ -109,8 +109,8 @@
                             <div class="card shadow">
                                 <div class="card-body">
                                     <div class="table-responsive">
-                                        <table class="table table-bordered text-black">
-                                            <thead class="text-center">
+                                        <table class="table text-black">
+                                            <thead class="text-center text-uppercase font-size-14">
                                                 <tr>
                                                     <th scope="col">Nama</th>
                                                     <th style="width: 5%;" scope="col">Status</th>
