updated admission card

--- a/dashboard.html
+++ b/dashboard.html
@@ -103,28 +103,28 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="" class="label-adm">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">No Peserta</label>
+                                            <div class="text-black mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="" class="label-adm">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Periode</label>
+                                            <div class=" text-black mb-1">
                                                 <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="" class="label-adm">Status</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Status</label>
+                                            <div class="text-black mb-1">
                                                 <div>
-                                                    <span class="badge-status">Silahkan memilih program
+                                                    <span class="badge-status font-weight-bold">Silahkan memilih program
                                                         studi.</span>
                                                 </div>
                                             </div>
 
-                                            <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-2">
-                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                16:37:36
+                                            <label for="" class="label-adm text-uppercase text-dark">Tanggal
+                                                Daftar</label>
+                                            <div class="text-black mb-2">
+                                                Jumat, 14 Agustus 2020, 16:37:36
                                             </div>
 
                                             <button class="btn btn-action-1 btn-admission-action mb-2">
@@ -142,28 +142,28 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="" class="label-adm">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">No Peserta</label>
+                                            <div class="text-black mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="" class="label-adm">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Periode</label>
+                                            <div class=" text-black mb-1">
                                                 <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="" class="label-adm">Status</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Status</label>
+                                            <div class="text-black mb-1">
                                                 <div>
-                                                    <span class="badge-status">Silahkan memilih program
+                                                    <span class="badge-status font-weight-bold">Silahkan memilih program
                                                         studi.</span>
                                                 </div>
                                             </div>
 
-                                            <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-2">
-                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                16:37:36
+                                            <label for="" class="label-adm text-uppercase text-dark">Tanggal
+                                                Daftar</label>
+                                            <div class="text-black mb-2">
+                                                Jumat, 14 Agustus 2020, 16:37:36
                                             </div>
 
                                             <button class="btn btn-action-1 btn-admission-action mb-2">
@@ -181,28 +181,28 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="" class="label-adm">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">No Peserta</label>
+                                            <div class="text-black mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="" class="label-adm">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Periode</label>
+                                            <div class=" text-black mb-1">
                                                 <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="" class="label-adm">Status</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Status</label>
+                                            <div class="text-black mb-1">
                                                 <div>
-                                                    <span class="badge-status">Silahkan memilih program
+                                                    <span class="badge-status font-weight-bold">Silahkan memilih program
                                                         studi.</span>
                                                 </div>
                                             </div>
 
-                                            <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-2">
-                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                16:37:36
+                                            <label for="" class="label-adm text-uppercase text-dark">Tanggal
+                                                Daftar</label>
+                                            <div class="text-black mb-2">
+                                                Jumat, 14 Agustus 2020, 16:37:36
                                             </div>
 
                                             <button class="btn btn-action-1 btn-admission-action mb-2">
@@ -215,33 +215,32 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="card admission-card-item card-border-left">
+                            </div><div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="" class="label-adm">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">No Peserta</label>
+                                            <div class="text-black mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="" class="label-adm">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Periode</label>
+                                            <div class=" text-black mb-1">
                                                 <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="" class="label-adm">Status</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <label for="" class="label-adm text-uppercase text-dark">Status</label>
+                                            <div class="text-black mb-1">
                                                 <div>
-                                                    <span class="badge-status">Silahkan memilih program
+                                                    <span class="badge-status font-weight-bold">Silahkan memilih program
                                                         studi.</span>
                                                 </div>
                                             </div>
 
-                                            <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-2">
-                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                16:37:36
+                                            <label for="" class="label-adm text-uppercase text-dark">Tanggal
+                                                Daftar</label>
+                                            <div class="text-black mb-2">
+                                                Jumat, 14 Agustus 2020, 16:37:36
                                             </div>
 
                                             <button class="btn btn-action-1 btn-admission-action mb-2">
