added personal data page

--- a/ubah-password.html
+++ b/ubah-password.html
@@ -100,13 +100,13 @@
                     <div class="row mb-3">
                         <div class="col-12">
                             <div class="form-group">
-                                <button class="btn btn-bg-blue btn-sm" onclick="location.href=''">Submit</button>
+                                <button class="btn btn-bg-blue btn-sm" onclick="location.href=''">SUBMIT</button>
                             </div>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12">
-                            <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="dashboard.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
