--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR -->
     <nav class="navbar sticky-top navbar-bs">
         <div class="container">
-            <a class="navbar-brand" href="dashboard.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/img/logo_maranatha.png" width="150" alt="">
             </a>
         </div>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="form-group">
                             <button class="btn btn-block btn-action"
-                                onclick="location.href='dashboard.html'">LOGIN</button>
+                                onclick="location.href='personal-data.html'">LOGIN</button>
                         </div>
                         <hr>
                         <div class="text-center ">
