--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR -->
     <nav class="navbar sticky-top navbar-bs">
         <div class="container">
-            <a class="navbar-brand" href="dashboard.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/img/logo_maranatha.png" width="150" alt="">
             </a>
         </div>
