updated personal data form

--- a/personal-data.html
+++ b/personal-data.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card shadow">
-                            <div class="card-header py-3">
+                            <div class="card-header py-3 text-center">
                                 <h6 class="m-0 font-weight-bold text-blue">DATA DIRI</h6>
                             </div>
                             <div class="card-body">
@@ -151,7 +151,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card shadow">
-                            <div class="card-header py-3">
+                            <div class="card-header py-3 text-center">
                                 <h6 class="m-0 font-weight-bold text-blue">DATA ORANG TUA</h6>
                             </div>
                             <div class="card-body">
@@ -261,7 +261,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card shadow">
-                            <div class="card-header py-3">
+                            <div class="card-header py-3 text-center">
                                 <h6 class="m-0 font-weight-bold text-blue">DATA SEKOLAH</h6>
                             </div>
                             <div class="card-body">
@@ -349,7 +349,8 @@
                 <div class="row">
                     <div class="col-6 mb-3 text-center">
                         <div class="form-group">
-                            <button class="btn btn-action-danger btn-responsive" type="submit">KELUAR</button>
+                            <button class="btn btn-action-danger btn-responsive" type="submit"
+                            onclick="location.href='index.html'">KELUAR</button>
                         </div>
                     </div>
 
@@ -378,6 +379,7 @@
             interval: 4000
         });
     </script>
+    <script src="assets/js/theme.js"></script>
 
 </body>
 
