added profile scroll spy

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <!-- DATEPICKER -->
     <link rel="stylesheet" href="assets/css/bootstrap-datepicker.css">
 
-<body id="page-top">
+<body id="page-top" data-spy="scroll" data-target="#profileNav" data-offset="1">
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
@@ -104,7 +104,7 @@
                         <!-- TABS -->
                         <div class="col-12 mb-3 sticky-top p-0">
                             <div class="col m-auto" style="max-width: 800px">
-                                <ul class="profile-nav nav nav-tabs justify-content-center m-auto shadow">
+                                <ul id="profileNav" class="profile-nav nav nav-tabs justify-content-center m-auto shadow">
                                     <li class="nav-item col-4 text-center p-0">
                                         <a class="nav-link" href="#data_diri">DATA DIRI</a>
                                     </li>
