updated profile page, added verification status page, updated personal data page, added upload status, updated program studi form

--- a/dashboard.html
+++ b/dashboard.html
@@ -85,6 +85,11 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
+                    <div class="alert alert-danger">
+                        Akun anda belum terverifikasi.
+                        <a href="status-verifikasi.html">Klik Disini</a> untuk melihat status verifikasi.
+                    </div>
+                    
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h4 class="text-dark mb-0 headline">DAFTAR PENDAFTARAN</h4>
                     </div>
