--- a/persyaratan.html
+++ b/persyaratan.html
@@ -113,7 +113,8 @@
                                             <thead class="text-center text-uppercase font-size-14">
                                                 <tr>
                                                     <th scope="col">Nama</th>
-                                                    <th style="width: 5%;" scope="col">Status</th>
+                                                    <th style="width: 5%;" scope="col">Status Verifikasi</th>
+                                                    <th style="width: 5%;" scope="col">Status Upload</th>
                                                     <th style="width: 15%;" scope="col"></th>
                                                     <th style="width: 5%;" scope="col">Upload</th>
                                                 </tr>
@@ -123,7 +124,10 @@
                                                     <td class="text-nowrap">Fotokopi rapor 4 semester kelas X s/d XI
                                                         (dilegalisir)</td>
                                                     <td class="text-center">
-                                                        <i class="fa fa-times"></i>
+                                                        <i class="fa fa-check"></i>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <i class="fa fa-check"></i>
                                                     </td>
                                                     <td class="text-center">
 
@@ -139,6 +143,9 @@
                                                         diserahkan saat kondisi sudah pulih)</td>
                                                     <td class="text-center">
                                                         <i class="fa fa-times"></i>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <i class="fa fa-check"></i>
                                                     </td>
                                                     <td class="text-center">
                                                         <a class="btn btn-bg-blue btn-sm" href="">
@@ -158,6 +165,7 @@
                                                     <td class="text-center">
                                                         <i class="fa fa-times"></i>
                                                     </td>
+                                                    <td></td>
                                                     <td class="text-center">
                                                         <a class="btn btn-secondary btn-sm font-weight-bold font-size-13" href="">
                                                             PILIH JADWAL
