--- a/register.html
+++ b/register.html
@@ -32,7 +32,12 @@
 
                         <div class="form-group">
                             <label for="email">Nama</label>
-                            <input type="email" class="form-control" id="email">
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        
+                        <div class="form-group">
+                            <label for="phone_number">Nomor HP</label>
+                            <input type="text" class="form-control" id="email">
                         </div>
 
                         <div class="form-group">
@@ -52,7 +57,7 @@
 
                         <div class="form-group">
                             <button class="btn btn-block btn-action"
-                                onclick="location.href='dashboard.html'">DAFTAR</button>
+                                onclick="location.href='personal-data.html'">DAFTAR</button>
                         </div>
                         <hr>
                         <div class="text-center ">
@@ -65,7 +70,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="footer text-center">
+    <footer class="footer text-center" style="position: relative;">
         <div class="container">
             © 2020 Universitas Kristen Maranatha
         </div>
