--- a/program-studi.html
+++ b/program-studi.html
@@ -105,13 +105,13 @@
 
                                         <fieldset disabled>
                                             <div class="form-group">
-                                                <label for="none"><strong>Sumbangan Wajib 1</strong></label>
+                                                <label for="none"><strong>Biaya Pembangunan 1</strong></label>
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
                                                         <span class="input-group-text" id="basic-addon1">Rp</span>
                                                     </div>
                                                     <input type="text" class="form-control"
-                                                        aria-describedby="basic-addon1" value="500.000">
+                                                        aria-describedby="basic-addon1" value="25.000.000">
                                                 </div>
                                             </div>
                                         </fieldset>
@@ -146,13 +146,13 @@
 
                                         <fieldset disabled>
                                             <div class="form-group">
-                                                <label for="none"><strong>Sumbangan Wajib 2</strong></label>
+                                                <label for="none"><strong>Biaya Pembangunan 2</strong></label>
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
                                                         <span class="input-group-text" id="basic-addon1">Rp</span>
                                                     </div>
                                                     <input type="text" class="form-control"
-                                                        aria-describedby="basic-addon1" value="500.000">
+                                                        aria-describedby="basic-addon1" value="25.000.000">
                                                 </div>
                                             </div>
                                         </fieldset>
