--- a/profile.html
+++ b/profile.html
@@ -87,6 +87,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="alert alert-danger">
+                        <i class="fas fa-fw fa-times-circle"></i>
                         Akun anda belum terverifikasi.
                         <a href="status-verifikasi.html">Klik Disini</a> untuk melihat status verifikasi.
                     </div>
