--- a/status-verifikasi.html
+++ b/status-verifikasi.html
@@ -92,7 +92,7 @@
                             <div class="col-12 mb-3">
                                 <div class="text-center">
                                     Silahkan cek inbox/spam email dan HP Anda untuk kode verifikasi.
-                                    Klik tombol Kirim ulang jika kode tidak terkirim.
+                                    Klik tombol Kirim ulang jika kode verifikasi tidak terkirim.
                                 </div>
                             </div>
 
@@ -100,7 +100,7 @@
                                 <div class="card mb-3">
                                     <div class="card-body text-center shadow">
                                         <div class="container text-dark">
-                                            <div class="mt-4 mb-4">
+                                            <div class="mb-3">
                                                 <h5 class="font-weight-bold">1. VERIFIKASI EMAIL</h5>
                                                 <h6>Rintarou Okabe</h6>
                                                 <h6 class="badge badge-success">
@@ -112,15 +112,15 @@
                                                     Terverifikasi
                                                 </h6> -->
 
-                                                <div class="form-group text-center">
+                                                <!-- <div class="form-group text-center">
                                                     <a class="btn btn-blue btn-sm" type="submit" href="#">KIRIM
                                                         ULANG</a>
-                                                </div>
+                                                </div> -->
                                             </div>
 
                                             <hr>
 
-                                            <div class="mb-4">
+                                            <div>
                                                 <h5 class="font-weight-bold">2. VERIFIKASI NO HP</h5>
                                                 <h6>087774886969</h6>
                                                 <h6 class="badge badge-danger">
