--- a/daftar-baru.html
+++ b/daftar-baru.html
@@ -86,6 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="alert alert-danger">
+                        <i class="fas fa-fw fa-times-circle"></i>
                         Akun anda belum terverifikasi.
                         <a href="status-verifikasi.html">Klik Disini</a> untuk melihat status verifikasi.
                     </div>
@@ -99,8 +100,19 @@
                                 <a href="tahun-akademik.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h5 class="font-weight-bold">D3 / S1</h5>
-                                        <h6 class="m-0 font-weight-bold font-size-13">DIPLOMA ATAU SARJANA</h6>
+                                        <h5 class="font-weight-bold">D3</h5>
+                                        <h6 class="m-0 font-weight-bold font-size-13">DIPLOMA</h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card bg-strata-1 shadow card-strata mb-3">
+                                <a href="tahun-akademik.html">
+                                    <div class="card-body text-white text-center">
+                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <h5 class="font-weight-bold">S1</h5>
+                                        <h6 class="m-0 font-weight-bold font-size-13">SARJANA</h6>
                                     </div>
                                 </a>
                             </div>
